--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.header{
+    width: 100%;
+    height: auto;
+}
+.header section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    background-color: dimgrey;
+    color: white;
+    padding: 15px;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+}
+.header section ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row; 
+    column-gap: 20px;
+
+}
+.header section ul #link{
+    list-style-type: none;
+    text-decoration: none;
+    color: white;
+}
+.header section ul{
+    list-style-type: none;
+}
+.cart{
+    padding-top: 7%;
+    padding-left:  2%;
+
+}
+.products{
+    padding-top: 5%;
+}
+.products h1{
+    text-align: center;
+    line-height: 90vh;
+    color: red;
+}
+.cart img{
+    width: 100px;
+    height: 100px;
+}
+.header span{
+    background-color: greenyellow;
+    color: #333;
+    font-weight: bold;
+    padding: 3px;
+    border-radius: 50%;
+}
+.single{
+    box-shadow: 0  0 2px 1px gainsboro;
+    width: 200px;
+    height: auto;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.single section{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    row-gap: 7px;
+    padding-bottom: 5px;
+}
+#img{
+    width: 100%;
+    box-shadow: 0 0 2px 1px gainsboro;
+    padding: 10px ;
+    border-radius: 5px;
+}
+.cart{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    flex-direction: row;
+    column-gap: 20px;
+    row-gap: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+    cursor: pointer;
+    padding: 7px 5px;
+    outline: none;
+    transition:  all 0.3s linear;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.products{
+    width: 100%;
+    height: auto;
+    padding-top: 5%;
 }
-
-.App-link {
-  color: #61dafb;
+.products #pro{
+    border-bottom: 1px solid #333;
+    padding: 10px 0px;
+    line-height: 30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.products section img{
+    width: 100px;
+    height: 100px;
+}
+#total{
+    text-align: start !important;
+    display: flex !important;
+    justify-content: flex-start !important;
+    align-items: flex-start !important;
+    padding-top: 0% !important;
 }
